# conway_game_of_life

./: CMakeLists.txt  main.c
